SERVER-39498 Make rollback trigger a lazy (rather than blocking) reload of the ShardRegistry